--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "yiisoft/yii2": "^2.0",
-    "Yuki61803/commerceml": "^0.1.0"
+    "Yuki61803/commerceml": "@stable"
   },
   "autoload": {
     "psr-4": {
