--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
     }
   ],
   "require": {
+    "php": ">=5.6",
     "yiisoft/yii2": "^2.0",
-    "Yuki61803/commerceml": "*"
+    "Yuki61803/commerceml": "^0.2.2"
   },
   "autoload": {
     "psr-4": {
@@ -29,5 +30,5 @@
       "type": "composer",
       "url": "https://asset-packagist.org"
     }
-  ]  
+  ]
 }
