--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "Yuki61803/yii2-1c-exchange",
   "description": "Yii2 module for the exchange of goods and documents from 1C",
   "type": "yii2-extension",
+  "license": "MIT",
   "authors": [
     {
       "name": "Aleksandr Kasyanov",
